--- a/OEBPS/Text/1280.html
+++ b/OEBPS/Text/1280.html
@@ -259,7 +259,7 @@
 	八音八曰竹。竹，律也，呂也，簫也，管也，篪也，籥也，笛也。律呂在律曆志。<span class="jiaozhusup">「律曆志」各本並作「律呂志」。按宋書有「律曆志」，無「律呂志」，後人曾誤分宋書律曆志為「律志」、「曆志」，上已糾正其失，今並改正。</span>
 </p>
 <p class="em2" id="p84"><a class="gg-link" href="#p84" onclick="return changeColor(this);"></a>
-	簫，世本云：「舜所造。」爾雅曰：「編二十三管，長尺四寸者曰{竹言}；<span class="jiaozhusup">各本並脫「長」字，又「{竹言}」字各本省文作「言」，今並據通典樂典及爾雅釋樂注文補正。</span>十六管長尺二寸者筊。」筊音爻。凡簫一名籟。前世有洞簫，其器今亡。蔡邕曰：「簫，編竹有底。」然則邕時無洞簫矣。
+	簫，世本云：「舜所造。」爾雅曰：「編二十三管，長尺四寸者曰䇾；<span class="jiaozhusup">各本並脫「長」字，又「䇾」字各本省文作「言」，今並據通典樂典及爾雅釋樂注文補正。</span>十六管長尺二寸者筊。」筊音爻。凡簫一名籟。前世有洞簫，其器今亡。蔡邕曰：「簫，編竹有底。」然則邕時無洞簫矣。
 </p>
 <p class="em2" id="p85"><a class="gg-link" href="#p85" onclick="return changeColor(this);"></a>
 	管，爾雅曰：「長尺，圍寸，併漆之，有底。」大者曰簥。簥音驕。中者曰篞。小者曰篎。篎音妙。古者以玉爲管，舜時西王母獻白玉琯是也。月令：「均琴、瑟、管、簫。」蔡邕章句曰：「管者，形長尺，圍寸，有孔無底。」其器今亡。
@@ -274,7 +274,7 @@
 	笛，案馬融長笛賦，此器起近世，出於羌中，京房備其五音。又稱丘仲工其事，不言仲所造。風俗通則曰：「丘仲造笛。武帝時人。」其後更有羌笛爾。三說不同，未詳孰實。
 </p>
 <p class="em2" id="p89"><a class="gg-link" href="#p89" onclick="return changeColor(this);"></a>
-	{竹叚}，杜摯笳賦云：「李伯陽入西戎所造。」漢舊注曰：「箛，號曰吹鞭。」晉先蠶儀注：<span class="jiaozhusup">各本並脫「儀」字，據通典樂典補。</span>「車駕住，吹小箛；發，吹大箛。」箛即{竹叚}也。又有胡笳。漢舊箏笛錄有其曲，不記所出本末。
+	䈔，杜摯笳賦云：「李伯陽入西戎所造。」漢舊注曰：「箛，號曰吹鞭。」晉先蠶儀注：<span class="jiaozhusup">各本並脫「儀」字，據通典樂典補。</span>「車駕住，吹小箛；發，吹大箛。」箛即䈔也。又有胡笳。漢舊箏笛錄有其曲，不記所出本末。
 </p>
 <p class="em2" id="p90"><a class="gg-link" href="#p90" onclick="return changeColor(this);"></a>
 	鼓吹，蓋短簫鐃哥。蔡邕曰：「軍樂也，黃帝岐伯所作，以揚德建武，勸士諷敵也。」周官曰：「師有功則愷樂。」左傳曰，晉文公勝楚，「振旅，凱而入」。司馬法曰：「得意則愷樂愷哥。」雍門周說孟嘗君，「鼓吹于不測之淵」。說者云，鼓自一物，吹自竽、籟之屬，非簫、鼓合奏，別爲一樂之名也。然則短簫鐃哥，此時未名鼓吹矣。應劭漢鹵簿圖，唯有騎執箛。箛即笳，不云鼓吹。而漢世有黃門鼓吹。漢享宴食舉樂十三曲，與魏世鼓吹長簫同。長簫短簫，伎錄並云，絲竹合作，執節者哥。又建初錄云，務成、黃爵、玄雲、遠期，皆騎吹曲，非鼓吹曲。此則列於殿庭者爲鼓吹，今之從行鼓吹爲騎吹，二曲異也。又孫權觀魏武軍，作鼓吹而還，此又應是今之鼓吹。魏、晉世，又假諸將帥及牙門曲蓋鼓吹，斯則其時謂之鼓吹矣。魏、晉世給鼓吹甚輕，牙門督將五校，悉有鼓吹。晉江左初，臨川太守謝摛每寢，輒夢聞鼓吹。有人爲其占之曰：「君不得生鼓吹，當得死鼓吹爾。」摛擊杜弢戰沒，追贈長水校尉，葬給鼓吹焉。謝尚爲江夏太守，詣安西將軍庾翼於武昌咨事，翼與尚射，曰：「卿若破的，當以鼓吹相賞。」尚射破的，便以其副鼓吹給之。今則甚重矣。
