--- a/OEBPS/Text/1303.html
+++ b/OEBPS/Text/1303.html
@@ -10,7 +10,7 @@
 	劉穆之，字道和，小字道民，東莞莒人，漢齊悼惠王肥後也。世居京口。少好書、傳，博覽多通，爲濟陽江敳所知。敳爲建武將軍、琅邪內史，以爲府主簿。
 </p>
 <p class="em2" id="p1"><a class="gg-link" href="#p1" onclick="return changeColor(this);"></a>
-	初，穆之嘗夢與高祖俱泛海，忽值大風，驚懼。俯視船下，見有二白龍夾舫。既而至一山，峰{山咢}聳秀，林樹繁密，意甚悅之。及高祖克京城，問何無忌曰：「急須一府主簿，何由得之？」無忌曰：「無過劉道民。」高祖曰：「吾亦識之。」即馳信召焉。時穆之聞京城有叫譟之聲，晨起出陌頭，屬與信會。穆之直視不言者久之。既而反室，壞布裳爲絝，往見高祖。高祖謂之曰：「我始舉大義，方造艱難，須一軍吏甚急，卿謂誰堪其選？」穆之曰：「貴府始建，軍吏實須其才，倉卒之際，當略無見踰者。」高祖笑曰：「卿能自屈，吾事濟矣。」即於坐受署。
+	初，穆之嘗夢與高祖俱泛海，忽值大風，驚懼。俯視船下，見有二白龍夾舫。既而至一山，峰崿聳秀，林樹繁密，意甚悅之。及高祖克京城，問何無忌曰：「急須一府主簿，何由得之？」無忌曰：「無過劉道民。」高祖曰：「吾亦識之。」即馳信召焉。時穆之聞京城有叫譟之聲，晨起出陌頭，屬與信會。穆之直視不言者久之。既而反室，壞布裳爲絝，往見高祖。高祖謂之曰：「我始舉大義，方造艱難，須一軍吏甚急，卿謂誰堪其選？」穆之曰：「貴府始建，軍吏實須其才，倉卒之際，當略無見踰者。」高祖笑曰：「卿能自屈，吾事濟矣。」即於坐受署。
 </p>
 <p class="em2" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
 	從平京邑，高祖始至，諸大處分，皆倉卒立定，並穆之所建也。遂委以腹心之任，動止咨焉。穆之亦竭節盡誠，無所遺隱。時晉綱寬弛，威禁不行，盛族豪右，負勢陵縱，小民窮蹙，自立無所。重以司馬元顯政令違舛，桓玄科條繁密。穆之斟酌時宜，隨方矯正，不盈旬日，風俗頓改。遷尚書祠部郎，復爲府主簿，記室錄事參軍，領堂邑太守。以平桓玄功，封西華縣五等子。
