--- a/OEBPS/Text/1305.html
+++ b/OEBPS/Text/1305.html
@@ -34,7 +34,7 @@
 	太祖誅羨之等及晦子新除祕書郎世休，收㬭、㬭子世平、兄子著作佐郎紹等。樂冏又遣使告晦：「徐、傅二公及㬭等並已誅。」晦先舉羨之、亮哀，次發子弟凶問。既而自出射堂，配衣軍旅。數從高祖征討，備睹經略，至是指麾處分，莫不曲盡其宜。二三日中，四遠投集，得精兵三萬人。乃奉表曰：
 </p>
 <p class="margin2" id="p9"><a class="gg-link" href="#p9" onclick="return changeColor(this);"></a>
-	臣階緣幸會，蒙武皇帝殊常之眷，外聞政事，內謀帷幄，經綸夷險，毗贊王業，預佐命之勳，膺河山之賞。及先帝不豫，導揚末命，臣與故司徒臣羨之、左光祿大夫臣亮、征北將軍臣道濟等，並升御床，跪受遺詔，載貽話言，託以後事。臣雖凡淺，感恩自厲，送往事居，誠貫幽顯。逮營陽失德，自絕宗廟，朝野岌岌，憂及禍難，忠謀協契，徇國忘己，援登聖朝，惟新皇祚。陛下馳傳乘流，曾不惟疑，臨朝殷懃，增崇封爵。此則臣等赤心已亮於天鑒，遠近萬邦咸達於聖旨。若臣等志欲專權，不顧國典，便當協翼幼主，孤背天日，豈復虛館七旬，仰望鸞旗者哉？故廬陵王於營陽之世，屢被猜嫌，積怨犯上，自貽非命。天祚明德，屬當昌運，不有所廢，將何以興？成人之美，春秋之高義，立帝清館，臣節之所司。耿弇不以賊遺君父，臣亦何負於宋室邪？況釁結{門兒}牆，禍成畏逼，天下耳目，豈伊可誣。
+	臣階緣幸會，蒙武皇帝殊常之眷，外聞政事，內謀帷幄，經綸夷險，毗贊王業，預佐命之勳，膺河山之賞。及先帝不豫，導揚末命，臣與故司徒臣羨之、左光祿大夫臣亮、征北將軍臣道濟等，並升御床，跪受遺詔，載貽話言，託以後事。臣雖凡淺，感恩自厲，送往事居，誠貫幽顯。逮營陽失德，自絕宗廟，朝野岌岌，憂及禍難，忠謀協契，徇國忘己，援登聖朝，惟新皇祚。陛下馳傳乘流，曾不惟疑，臨朝殷懃，增崇封爵。此則臣等赤心已亮於天鑒，遠近萬邦咸達於聖旨。若臣等志欲專權，不顧國典，便當協翼幼主，孤背天日，豈復虛館七旬，仰望鸞旗者哉？故廬陵王於營陽之世，屢被猜嫌，積怨犯上，自貽非命。天祚明德，屬當昌運，不有所廢，將何以興？成人之美，春秋之高義，立帝清館，臣節之所司。耿弇不以賊遺君父，臣亦何負於宋室邪？況釁結䦧牆，禍成畏逼，天下耳目，豈伊可誣。
 </p>
 <p class="margin2" id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
 	臣忝居蕃任，乃誠匪懈，爲政小大，必先啟聞。糾剔群蠻，清夷境內，分留弟姪，並侍殿省。陛下聿遵先志，申以婚姻，童稚之目，猥荷齒召，薦女遷子，合門相送。事君之道，義盡於斯。臣羨之總錄百揆，翼亮三世，年耆乞退，屢抗表疏，優旨綢繆，未垂順許。臣亮管司喉舌，恪虔夙夜，恭謹一心，守死善道。此皆皇宋之宗臣，社稷之鎮衛，而讒人傾覆，妄生國釁，天威震怒，加以極刑，并及臣門，同被孥戮。雖未知臣道濟問，推理即事，不容獨存。先帝顧託元臣翼命之佐，勦於佞邪之手，忠貞匪躬之輔，不免夷滅之誅。陛下春秋方富，始覽萬機，民之情僞，未能鑒悉。王弘兄弟，輕躁昧進，王華猜忌忍害，規弄威權，先除執政，以逞其欲。天下之人，知與不知，孰不爲之痛心憤怨者哉！
