--- a/OEBPS/Text/1324.html
+++ b/OEBPS/Text/1324.html
@@ -100,7 +100,7 @@
 	演之昔與同使江邃字玄遠，濟陽考城人。頗有文義。官至司徒記室參軍，撰文釋，傳於世。
 </p>
 <p class="em2" id="p31"><a class="gg-link" href="#p31" onclick="return changeColor(this);"></a>
-	演之子睦，至黃門郎，通直散騎常侍。世祖大明初，坐要引上左右俞欣之訪評殿省內事，又與弟西陽王文學勃忿{門兒}不睦，坐徙始興郡，勃免官禁錮。
+	演之子睦，至黃門郎，通直散騎常侍。世祖大明初，坐要引上左右俞欣之訪評殿省內事，又與弟西陽王文學勃忿䦧不睦，坐徙始興郡，勃免官禁錮。
 </p>
 <p class="em2" id="p32"><a class="gg-link" href="#p32" onclick="return changeColor(this);"></a>
 	勃好爲文章，善彈琴，能圍棋，而輕薄逐利。歷尚書殿中郎。太宗泰始中，爲太子右衛率，加給事中。時欲北討，使勃還鄉里募人，多受貨賄。上怒，下詔曰：「沈勃琴書藝業，口有美稱，而輕躁耽酒，幼多罪愆。比奢淫過度，妓女數十，聲酣放縱，無復劑限。自恃吳興土豪，比門義故，脅說士庶，告索無已。又輒聽募將，委役還私，託注病叛，遂有數百。周旋門生，競受財貨，少者至萬，多者千金，考計贓物，二百餘萬，便宜明罰敕法，以正典刑。故光祿大夫演之昔受深遇，忠績在朝，尋遠矜懷，能無弘律，可徙勃西垂，令一思愆悔。」於是徙付梁州。廢帝元徽初，以例得還。結事阮佃夫、王道隆等，復爲司徒左長史。爲廢帝所誅。順帝即位，追贈本官。
