--- a/OEBPS/Text/1328.html
+++ b/OEBPS/Text/1328.html
@@ -199,7 +199,7 @@
 	鳥則從鴻鶂鵠，𪃩鷺鴇𪃥。雞鵲繡質，鶷鸐綬章。晨鳧朝集，時鷮山梁。海鳥違風，朔禽避涼。荑生歸北，霜降客南。接響雲漢，侶宿江潭。聆清哇以下聽，載王子而上參。薄回涉以弁翰，映明壑而自耽。<span class="jiazhu">【從音昆。鴻音洪。鶂音溢。左傳云：「六鶂退飛」，字如此。鵠音下竺反。𪃩音秋。鷺音路。鴇音保。𪃥音相。唐公之馬，與此鳥色同，故謂爲𪃥，音相。雞鵲鶷鸐，見張茂先博物志。鸐音翟，亦雉之美者，此四鳥並美采質。鳧音符，野鴨也，常待晨而飛。鷮音已消反，長尾雉也。論語云：「山梁雌雉，時哉時哉。」海鳥爰居，臧文仲不知其鳥，以爲神也。事見左傳。朔禽，雁也，寒月轉往衡陽。禮記，霜始降，雁來賓。歲莫云，雁北向。政是陽初生時，荑生歸北，霜降客南。山雞映水自翫其羽儀者。】</span>
 </p>
 <p class="margin2" id="p64"><a class="gg-link" href="#p64" onclick="return changeColor(this);"></a>
-	山上則猿鼲貍獾，犴獌猰廄。山下則熊羆豺虎，羱鹿麕麤。擲飛枝於窮崖，踔空絕於深硎。蹲谷底而長嘯，攀木杪而哀鳴。<span class="jiazhu">【猿音袁。鼲音魂。貍音力之反。獾音火丸反。犴音五懸反。獌音曼，似獾而長，狼之屬，一曰貙。猰音安黠反。廄音弋生反，貍之黃黑者，一曰似{犭分}。豺音在皆反。羱音元，野羊大角。麕音鬼珉反。麤音京，能踔擲。虎長嘯，猿哀鳴，鳴聲可翫。】</span>
+	山上則猿鼲貍獾，犴獌猰廄。山下則熊羆豺虎，羱鹿麕麤。擲飛枝於窮崖，踔空絕於深硎。蹲谷底而長嘯，攀木杪而哀鳴。<span class="jiazhu">【猿音袁。鼲音魂。貍音力之反。獾音火丸反。犴音五懸反。獌音曼，似獾而長，狼之屬，一曰貙。猰音安黠反。廄音弋生反，貍之黃黑者，一曰似𰠿。豺音在皆反。羱音元，野羊大角。麕音鬼珉反。麤音京，能踔擲。虎長嘯，猿哀鳴，鳴聲可翫。】</span>
 </p>
 <p class="margin2" id="p65"><a class="gg-link" href="#p65" onclick="return changeColor(this);"></a>
 	緡綸不投，置羅不披。磻弋靡用，蹄筌誰施。鑑虎狼之有仁，傷遂欲之無崖。顧弱齡而涉道，悟好生之咸宜。率所由以及物，諒不遠之在斯。撫鷗䱔而悅豫，杜機心於林池。<span class="jiazhu">【八種皆是魚獵之具。自少不殺，至乎白首，故在山中，而此歡永廢。莊周云，虎狼仁獸，豈不父子相親。世云虎狼暴虐者，政以其如禽獸，而人物不自悟其毒害，而言虎狼可疾之甚，苟其遂欲，豈復崖限。自弱齡奉法，故得免殺生之事。苟此悟萬物好生之理。易云：「不遠復，無祇悔。」庶乘此得以入道。莊周云，海人有機心，鷗鳥舞而不下。今無害彼之心，各說豫於林池也。】</span>
