--- a/OEBPS/Text/1299.html
+++ b/OEBPS/Text/1299.html
@@ -910,7 +910,7 @@
 	蘇平令，永初郡國有，何志不注置立。徐曰藉平。
 </p>
 <p class="margin2" id="p301"><a class="gg-link" href="#p301" onclick="return changeColor(this);"></a>
-	{田叔}安令，永初郡國有，何志不注置立。
+	󵨔安令，永初郡國有，何志不注置立。
 </p>
 <p class="margin2" id="p302"><a class="gg-link" href="#p302" onclick="return changeColor(this);"></a>
 	夫寧令，永初郡國有，何志不注置立。
