--- a/OEBPS/Text/1315.html
+++ b/OEBPS/Text/1315.html
@@ -16,7 +16,7 @@
 	徵爲右衛將軍，加給事中，不拜。尋除侍中，領本國中正，徙琅邪王大司馬司馬。尋出爲吳興太守，加冠軍。<span class="jiaozhusup">錢大昕廿二史考異云：「冠軍下當有將軍二字。」</span>先是，吳興頻喪太守，云項羽神爲卞山王，居郡聽事，二千石至，常避之，季恭居聽事，竟無害也。遷尚書右僕射，固讓。義熙八年，復督五郡諸軍、征虜、會稽內史。修飾學校，督課誦習。<span class="jiaozhusup">「督課誦習」各本作「計課調習」，據南史改。按上句云「修飾學校」，下句接「督課誦習」，皆言學校事，南史是。</span>十年，復爲尚書右僕射，加散騎常侍，又讓不拜。頃之，除領軍將軍，加散騎常侍，本州大中正。十二年，致仕，拜金紫光錄大夫，常侍如故。是歲，高祖北伐，季恭求從，以爲太尉軍諮祭酒、後將軍。從平關、洛。高祖爲相國，又隨府遷。宋臺初建，令書以爲尚書令，加散騎常侍，又讓不受，乃拜侍中、特進、左光祿大夫。辭事東歸，高祖餞之戲馬臺，百僚咸賦詩以述其美。及受命，加開府儀同三司，辭讓累年，終以不受。永初三年，薨，時年七十六。追贈侍中、左光祿大夫、開府儀同三司。
 </p>
 <p class="em2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
-	子山士，<span class="jiaozhusup">「山士」殿本作「{山王}」，各本作「勰」，不成字。本書褚叔度傳：「孔季恭子山士。」符瑞志下，元嘉二十年，吳興太守孔山士。二凶傳有吳興太守孔山士。此山士二字，誤併成「勰」。今改正。</span>歷顯位，侍中，會稽太守，坐小弟駕部郎道穰逼略良家子女，白衣領郡。元嘉二十七年，卒官。
+	子山士，<span class="jiaozhusup">「山士」殿本作「󺦋」，各本作「勰」，不成字。本書褚叔度傳：「孔季恭子山士。」符瑞志下，元嘉二十年，吳興太守孔山士。二凶傳有吳興太守孔山士。此山士二字，誤併成「勰」。今改正。</span>歷顯位，侍中，會稽太守，坐小弟駕部郎道穰逼略良家子女，白衣領郡。元嘉二十七年，卒官。
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
 	弟靈符，元嘉末，爲南譙王義宣司空長史、南郡太守，尚書吏部郎。世祖大明初，自侍中爲輔國將軍、郢州刺史。入爲丹陽尹。山陰縣土境褊狹，民多田少，靈符表徙無貲之家於餘姚、鄞、鄮三縣界，墾起湖田。上使公卿博議，太宰江夏王義恭議曰：「夫訓農修本，有國所同，土著之民，習翫日久，如京師無田，不聞徙居他縣。尋山陰豪族富室，頃畝不少，貧者肆力，非爲無處，耕起空荒，無救災歉。又緣湖居民，魚鴨爲業，及有居肆，理無樂徙。」尚書令柳元景、右僕射劉秀之、尚書王瓚之、顧凱之、顏師伯、嗣湘東王彧議曰：<span class="jiaozhusup">孫虨宋書考論云：「嗣字不瞭，疑衛尉字之誤。時太宗正爲衛尉。」</span>「富戶溫房，無假遷業；窮身寒室，必應徙居。葺宇疏皋，產粒無待，資公則公未易充，課私則私卒難具。生計既完，畬功自息，宜募亡叛通卹及與樂田者，其往經創，須粗修立，然後徙居。」侍中沈懷文、王景文、黃門侍郎劉敳、郄顒議曰：「百姓雖不親農，不無資生之路，若驅以就田，則坐相違奪。且鄞等三縣，去治並遠，既安之民，忽徙他邑，新垣未立，舊居已毀，去留兩困，無以自資。謂宜適任民情，從其所樂，開宥逋亡，且令就業，若審成腴壤，然後議遷。」太常王玄謨議曰：「小民貧匱，遠就荒疇，去舊即新，糧種俱闕，習之既難，勸之未易。謂宜微加資給，使得肆勤，明力田之賞，申怠惰之罰。」光祿勳王昇之議曰：「遠廢之疇，方翦荊棘，率課窮乏，其事彌難，資徙粗立，<span class="jiaozhusup">「徙」各本並作「徒」，據通典食貨典、元龜四八六改。</span>徐行無晚。」上違議，從其徙民，並成良業。
