--- a/OEBPS/Text/1329.html
+++ b/OEBPS/Text/1329.html
@@ -49,7 +49,7 @@
 	二十二年，太子詹事范曄等謀反，事逮義康，事在曄傳。有司上曰：「義康昔擅國權，恣心凌上，結朋樹黨，苞納凶邪。重釁彰著，事合明罰。特遭陛下仁愛深至，敦惜周親，封社不削，爵寵無貶。四海之心，朝野之議，咸謂皇德雖厚，實橈典刑。而義康曾不思此大造之德，自出南服，詭飾情貌，外示知懼，內實不悛。窮好極欲，干請無度。聖慈含弘，每不折舊，矜釋屢加，恩疇已往。而陰敦行李，方啟交通之謀，潛資左右，以要死士之命。崎嶇伺隙，不忘窺窬。時猶隱忍，罰止僕侍。狂疾之性，永不懲革，兇心遂成，悖謀仍構。遠投群醜，千里相結，再議宗社，重闚鼎祚。賴陛下至誠感神，宋曆方永，故姦事昭露，罪人斯得。周公上聖，不辭同氣之刑；漢文仁明，無隱從兄之惡。況義康釁深二叔，謀過淮南，背親反道，自棄天地。臣等參議，請下有司削義康王爵，收付廷尉法獄治罪。」詔特宥大辟。於是免義康及子泉陵侯允、女始寧豐城益陽興平四縣主爲庶人，絕屬籍，徙付安成郡。以寧朔將軍沈邵爲安成公相，領兵防守。義康在安成讀書，見淮南厲王長事，廢書歎曰：「前代乃有此，我得罪爲宜也。」
 </p>
 <p class="em2" id="p13"><a class="gg-link" href="#p13" onclick="return changeColor(this);"></a>
-	二十四年，豫章胡誕世、前吳平令袁惲等謀反，襲殺豫章太守桓隆、南昌令諸葛智之，<span class="jiaozhusup">「桓隆」文帝紀作「桓隆之」。六朝人人名後之「之」字，有時可省去。「諸葛智之」胡藩傳作「諸葛和之」。</span>聚眾據郡，復欲奉戴義康。太尉錄尚書江夏王義恭等奏曰：「投{田卄}之言，義著雅篇，流殛之教，事在書典。庶人義康負釁深重，罪不容戮。聖仁不忍，屢加遲回，宥其大辟，賜遷近甸，斯乃至愛發天，超邈終古。曾不遇愆甘引，而讒言同眾，佷悖徼幸，每形辭色，內宣家人，外動民聽，不逞之族，因以生心。胡誕世假竊名號，搆成凶逆。杜漸除微，古今所務，況禍機驟發，庸可忽乎。臣等參議，宜徙廣州遠郡，放之邊表，庶有防絕。」奏可，仍以安成公相沈邵爲廣州事。未行，值邵病卒，索虜來寇瓜步，天下擾動。上慮異志者或奉義康爲亂，世祖時鎮彭城，累啟宜爲之所，太子及尚書左僕射何尚之並以爲言。二十八年正月，遣中書舍人嚴龍齎藥賜死。<span class="jiaozhusup">「嚴龍」南史作「嚴麝」。</span>義康不肯服藥，曰：「佛教自殺不復得人身，便隨宜見處分。」乃以被揜殺之，時年四十三，以侯禮葬安成。
+	二十四年，豫章胡誕世、前吳平令袁惲等謀反，襲殺豫章太守桓隆、南昌令諸葛智之，<span class="jiaozhusup">「桓隆」文帝紀作「桓隆之」。六朝人人名後之「之」字，有時可省去。「諸葛智之」胡藩傳作「諸葛和之」。</span>聚眾據郡，復欲奉戴義康。太尉錄尚書江夏王義恭等奏曰：「投𢌿之言，義著雅篇，流殛之教，事在書典。庶人義康負釁深重，罪不容戮。聖仁不忍，屢加遲回，宥其大辟，賜遷近甸，斯乃至愛發天，超邈終古。曾不遇愆甘引，而讒言同眾，佷悖徼幸，每形辭色，內宣家人，外動民聽，不逞之族，因以生心。胡誕世假竊名號，搆成凶逆。杜漸除微，古今所務，況禍機驟發，庸可忽乎。臣等參議，宜徙廣州遠郡，放之邊表，庶有防絕。」奏可，仍以安成公相沈邵爲廣州事。未行，值邵病卒，索虜來寇瓜步，天下擾動。上慮異志者或奉義康爲亂，世祖時鎮彭城，累啟宜爲之所，太子及尚書左僕射何尚之並以爲言。二十八年正月，遣中書舍人嚴龍齎藥賜死。<span class="jiaozhusup">「嚴龍」南史作「嚴麝」。</span>義康不肯服藥，曰：「佛教自殺不復得人身，便隨宜見處分。」乃以被揜殺之，時年四十三，以侯禮葬安成。
 </p>
 <p class="em2" id="p14"><a class="gg-link" href="#p14" onclick="return changeColor(this);"></a>
 	六子：允、肱、珣、昭、方、曇辯。允初封泉陵縣侯，食邑七百戶。昭、方並早夭。允等留安成，元凶得志，遣殺之。
@@ -73,7 +73,7 @@
 	義宣在鎮十年，兵強財富，既首創大義，威名著天下，凡所求欲，無不必從。朝廷所下制度，意所不同者，一不遵承。嘗獻世祖酒，先自酌飲，封送所餘，其不識大體如此。初，臧質陰有異志，以義宣凡弱，易可傾移，欲假手爲亂，以成其姦。自襄陽往江陵見義宣，便盡禮，事在質傳。及至江州，每密信說義宣，以爲「有大才，負大功，挾震主之威，自古尠有全者，宜在人前，蚤有處分。且萬姓莫不係心於公，整眾入朝，內外孰不欣戴。不爾一旦受禍，悔無所及。」義宣陰納質言，而世祖閨庭無禮，與義宣諸女淫亂，義宣因此發怒，密治舟甲，克孝建元年秋冬舉兵。報豫州刺史魯爽、兗州刺史徐遺寶使同。爽狂酒失旨，其年正月便反。遣府戶曹送版，以義宣補天子，并送天子羽儀。遺寶亦勒兵向彭城。義宣及質狼狽起兵。二月二十六日，加都督中外諸軍事，置左右長史、司馬，使僚佐悉稱名。遣傳奉表曰：
 </p>
 <p class="margin2" id="p21"><a class="gg-link" href="#p21" onclick="return changeColor(this);"></a>
-	臣聞博陸毗漢，獲疑宣后；昌國翼燕，見猜惠王。常謂異姓震主，嫌隙易構；葭莩淳戚，昭亮可期。臣雖庸懦，少希忠謹。值巨逆滔天，忘家殉國，雖曆算有歸，微績不樹，竭誠盡愚，貫之幽顯。而微疑莫監，積毀日聞；投杼之聲，紛紜溢聽。諒緣姦臣交亂，成是貝錦。夫澆俗之季，少貞節之臣；冰霜競至，靡後彫之木。並寢處凶世，甘榮僞朝，皆纓冕之所棄，投{田卄}之所取。至乃位超昔寵，任參大政，惡直醜勳，妄生邪說，疑惑明主，誣罔視聽。又南從郡僚，勞不足紀，橫叨天功，以爲己力，同弊相扇，圖傾宗社。臧質去歲忠節，勳高古賢，魯爽協同大義，志契金石，此等猜毀，必欲禍陷。昔汲黯尚存，劉安寢志；孔父既逝，華督縱逆。臣雖不武，績著艱難，復肆讒狡，規見誘召。宗祀之危，綴旒非所。
+	臣聞博陸毗漢，獲疑宣后；昌國翼燕，見猜惠王。常謂異姓震主，嫌隙易構；葭莩淳戚，昭亮可期。臣雖庸懦，少希忠謹。值巨逆滔天，忘家殉國，雖曆算有歸，微績不樹，竭誠盡愚，貫之幽顯。而微疑莫監，積毀日聞；投杼之聲，紛紜溢聽。諒緣姦臣交亂，成是貝錦。夫澆俗之季，少貞節之臣；冰霜競至，靡後彫之木。並寢處凶世，甘榮僞朝，皆纓冕之所棄，投𢌿之所取。至乃位超昔寵，任參大政，惡直醜勳，妄生邪說，疑惑明主，誣罔視聽。又南從郡僚，勞不足紀，橫叨天功，以爲己力，同弊相扇，圖傾宗社。臧質去歲忠節，勳高古賢，魯爽協同大義，志契金石，此等猜毀，必欲禍陷。昔汲黯尚存，劉安寢志；孔父既逝，華督縱逆。臣雖不武，績著艱難，復肆讒狡，規見誘召。宗祀之危，綴旒非所。
 </p>
 <p class="margin2" id="p22"><a class="gg-link" href="#p22" onclick="return changeColor(this);"></a>
 	臣託體皇基，連暉日月，王室顛墜，咎在微躬，敢忘抵鼠之忌，甘受犯墉之責。輒徵召甲卒，分命眾藩，使忠勤申憤，義夫效力，戮此凶醜，謝愆闕廷，則進不負七廟之靈，退無愧二朝之遇。臨表感愧，辭不自宣。
